<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:gravity="bottom" android:id="@+id/linearLayout">

    <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/userImageNavHeader"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/loginButtonNavHeader"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/userNameNavHeader"
            tools:text="Filipe Augusto"
            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader" app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/userEmailNavHeader"
            tools:text="filipe@gmail.com"
            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/loginButtonNavHeader"
            android:background="@android:color/transparent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:onClick="loginButtonNavClicked"
            android:textAlignment="textStart"
            android:gravity="start"/>
    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/addchannelbutton"
            android:id="@+id/addChannelButton"
            android:background="@android:color/transparent" android:scaleType="fitXY" android:padding="5dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/login_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
